# ai-data-lake-query

./: .env  README.md  app.py  pyproject.toml  requirements.txt
aws/: ai-query-AthenaLambdaAPI-swagger-apigateway.json  lambda_function.py
